--- a/example/factory/platformio.ini
+++ b/example/factory/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
 lib_dir = ../../lib
-
+src_dir = .
 [env:ESP32-S3-DevKitC-1]
 platform = espressif32
 board = esp32-s3-devkitc-1
@@ -17,7 +17,7 @@ framework = arduino
 
 
 build_flags = 
-    -DLV_LVGL_H_INCLUDE_SIMPLE
+    -DLV_CONF_INCLUDE_SIMPLE
     -DBOARD_HAS_PSRAM
     -DARDUINO_USB_MODE=1 
     ; -DARDUINO_USB_CDC_ON_BOOT=1 
