--- a/example/mic/platformio.ini
+++ b/example/mic/platformio.ini
@@ -9,13 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
+boards_dir = ../../boards
 globallib_dir = ../../lib
 src_dir = .
 
-[env:ESP32-S3-DevKitC-1]
-
+[env:lilygo-t-embed]
 platform = espressif32
-board = esp32-s3-devkitc-1
+board = lilygo-t-embed
 framework = arduino
 build_flags = 
     -DLV_LVGL_H_INCLUDE_SIMPLE
@@ -24,5 +24,4 @@ build_flags =
     -DARDUINO_USB_CDC_ON_BOOT=1 
 
 board_build.partitions=huge_app.csv
-board_build.arduino.memory_type = qio_opi
 
