--- a/example/tft/platformio.ini
+++ b/example/tft/platformio.ini
@@ -9,13 +9,14 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
+boards_dir = ../../boards
 globallib_dir = ../../lib
 src_dir = .
 
-[env:ESP32-S3-DevKitC-1]
+[env:lilygo-t-embed]
 
 platform = espressif32
-board = esp32-s3-devkitc-1
+board = lilygo-t-embed
 framework = arduino
 
 
@@ -27,4 +28,3 @@ build_flags =
 
 
 board_build.partitions=huge_app.csv
-board_build.arduino.memory_type = qio_opi
