--- a/example/factory/platformio.ini
+++ b/example/factory/platformio.ini
@@ -8,13 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
+boards_dir = ../../boards
 lib_dir = ../../lib
 src_dir = .
-[env:ESP32-S3-DevKitC-1]
+[env:lilygo-t-embed]
 platform = espressif32
-board = esp32-s3-devkitc-1
+board = lilygo-t-embed
 framework = arduino
-
 
 build_flags = 
     -DLV_CONF_INCLUDE_SIMPLE
@@ -25,7 +25,6 @@ build_flags =
     -I .
 
 board_build.partitions=huge_app.csv
-board_build.arduino.memory_type = qio_opi
 
 ; lib_deps =
 ;     kosme/arduinoFFT @ ~1.5.6
