--- a/example/led/platformio.ini
+++ b/example/led/platformio.ini
@@ -9,19 +9,15 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
+boards_dir = ../../boards
 globallib_dir = ../../lib
 src_dir = .
 
-[env:ESP32-S3-DevKitC-1]
+[env:lilygo-t-embed]
 
 platform = espressif32
-board = esp32-s3-devkitc-1
+board = lilygo-t-embed
 framework = arduino
-
-platform_packages =
-    framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#2.0.5
-
-; upload_port = COM7
 
 build_flags = 
     -DLV_LVGL_H_INCLUDE_SIMPLE
@@ -31,7 +27,6 @@ build_flags =
     ; -DCORE_DEBUG_LEVEL=2
 
 board_build.partitions=huge_app.csv
-board_build.arduino.memory_type = qio_opi
 
 
 ; lib_deps =
