--- a/example/sound/platformio.ini
+++ b/example/sound/platformio.ini
@@ -9,17 +9,16 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
+boards_dir = ../../boards
 globallib_dir = ../../lib
 src_dir = .
 
-[env:ESP32-S3-DevKitC-1]
+[env:lilygo-t-embed]
 
 platform = espressif32
-board = esp32-s3-devkitc-1
+board = lilygo-t-embed
 framework = arduino
 
-platform_packages =
-    framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#2.0.5
 
 
 build_flags = 
@@ -30,5 +29,4 @@ build_flags =
     ; -DCORE_DEBUG_LEVEL=2
 
 board_build.partitions=huge_app.csv
-board_build.arduino.memory_type = qio_opi
 
