Fix Arduinio IDE 2.0.14 compilation error

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ default_envs = factory
 ; default_envs = TFT_Rainbow
 
 src_dir = examples/${platformio.default_envs}
-
+data_dir = examples/${platformio.default_envs}/data
 [env]
 platform = espressif32@6.3.0
 board = lilygo-t-display-s3
@@ -27,7 +27,6 @@ framework = arduino
 build_flags = 
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DDISABLE_ALL_LIBRARY_WARNINGS
-    -DLV_CONF_INCLUDE_SIMPLE
     -DBOARD_HAS_PSRAM
 
 board_build.partitions=huge_app.csv
