Added CC1101 + NFC Shield examples

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,10 @@ default_envs = factory
 ; default_envs = tft
 ; default_envs = TFT_Rainbow
 
+; The sketch only works with CC1101 + NFC Shield
+; default_envs = CC1101_Transmit
+; default_envs = CC1101_Receive
+
 src_dir = examples/${platformio.default_envs}
 data_dir = examples/${platformio.default_envs}/data
 [env]
@@ -26,6 +30,7 @@ framework = arduino
 
 build_flags = 
     -DARDUINO_USB_CDC_ON_BOOT=1
+    ; -UARDUINO_USB_CDC_ON_BOOT
     -DDISABLE_ALL_LIBRARY_WARNINGS
     -DBOARD_HAS_PSRAM
 
@@ -37,5 +42,9 @@ board_build.partitions=huge_app.csv
 [env:tft]
 [env:sound]
 [env:TFT_Rainbow]
+[env:CC1101_Transmit]
+[env:CC1101_Receive]
+
+
 
 
