Added si4735 shield example form https://github.com/ralphxavier/SI4735

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,10 @@ default_envs = factory
 ; default_envs = CC1101_Transmit
 ; default_envs = CC1101_Receive
 
+; The sketch only works with SI4735 Shield
+; default_envs = SI4735_Shield
+
+
 src_dir = examples/${platformio.default_envs}
 data_dir = examples/${platformio.default_envs}/data
 [env]
@@ -44,7 +48,5 @@ board_build.partitions=huge_app.csv
 [env:TFT_Rainbow]
 [env:CC1101_Transmit]
 [env:CC1101_Receive]
-
-
-
+[env:SI4735_Shield]
 
